--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dancercade</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dancercade</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <video id="video" style="width: 360px; height: 270px" autoplay></video>
+    <canvas
+      class="output_canvas"
+      id="output_canvas"
+      width="360"
+      height="270"
+      style="position: absolute; left: 0px; top: 0px"
+    ></canvas>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
